--- a/src/components/SolveProblems/SolveProblems.scss
+++ b/src/components/SolveProblems/SolveProblems.scss
@@ -21,6 +21,7 @@
     &__item {
         /* width: calc(100%/3 - 22px * 2/3);  */ //До правок с Яной
         width: calc(100%/3 - 32px * 2/3); 
+        /* min-height: 467px; */
         background: #F7F7F7;  
         border-radius: 30px;               
     } 
@@ -30,16 +31,16 @@
         padding-left: 33px;
         padding-right: 33px; 
         padding-top: 40px;
-        padding-bottom: 40px;
+        padding-bottom: 67px;
     }
     &__list-title {
-        min-height: 82px;
+        /* min-height: 82px; */
         font-size: 32px;
         line-height: 41px;
         font-weight: 700;
     }
     &__list-items {
-        margin-top: 20px;
+        margin-top: 61px;
     }
     &__list-item {
         padding-bottom: 20px;
@@ -61,21 +62,22 @@
         }
         &__item {
             width: calc(100%/3 - 30px * 2/3); 
-            border-radius: 60px;               
+            border-radius: 60px; 
+            /* min-height: 712px;    */           
         } 
         &__wrapper {
             padding-left: 55px;
             padding-right: 25px; 
-            padding-top: 44px;
-            padding-bottom: 0;
+            padding-top: 65px;
+            padding-bottom: 10px;
         }
         &__list-title {
-            min-height: 128px;
+            /* min-height: 128px; */
             font-size: 50px;
             line-height: 64px;
         }
         &__list-items {
-            margin-top: 50px;
+            margin-top: 83px;
         }
         &__list-item{
             padding-bottom: 44px;
@@ -87,7 +89,7 @@
 @media (max-width: $desktop) {
     .problems {
         &__list-title {
-            min-height: 60px; 
+            /* min-height: 60px;  */
             font-size: 23px;
             line-height: 33px; 
         }
@@ -100,25 +102,31 @@
 }
 @media (max-width: $tablet)  {
     .problems {
-        margin-top: 180px;
+        /* margin-top: 180px; */ //Идеальный отступ
+        margin-top: 150px;
         &__items {
-            margin-top: 105px;
+            /* margin-top: 105px; */ //Идеальный отступ
+            margin-top: 70px;
         }
         &__item {  
             width: calc(100%/3 - 20px * 2/3); 
+            /* min-height: 280px; */
             border-radius: 20px;               
         }
         &__wrapper {
-            padding-top: 20px;
+            padding-top: 15px;
             padding-left: 20px;
-            padding-right: 10px; 
-            padding-bottom: 0;
+            padding-right: 5px; 
+            padding-bottom: 21px;
         }
         &__list-title {
-            min-height: 40px;
+            /* min-height: 40px; */
             font-size: 16px;
             line-height: 20px;
         }  
+        &__list-items {
+            margin-top: 28px;
+        }
         &__list-item {
             font-size: 13px;
             line-height: 16px;
@@ -134,7 +142,7 @@
             padding-bottom: 10px;
         }
         &__list-title {
-            min-height: 33px;
+            /* min-height: 33px; */
             font-size: 13px;
             line-height: 16px;
         } 
@@ -177,7 +185,7 @@
             padding-bottom: 20px;   
         } 
         &__list-title {
-            min-height: 15px;
+            /* min-height: 15px; */
             font-size: 16px;
             line-height: 20px;
             text-align: center;
@@ -216,7 +224,7 @@
         }
         &__list-title {
             height: 0;
-            min-height: 15px;
+            /* min-height: 15px; */
             font-size: 13px;
             line-height: 16px;
             padding-bottom: 12px;
