--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -301,7 +301,7 @@
 
 @media (hover: none) {
   #dark .footer__icon:hover {
-    fill: n$textColor_dark;
+    fill: $textColor_dark;
   }
   #dark .footer__icon:active {
     fill: $accentColor;
