--- a/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
+++ b/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
@@ -1,28 +1,33 @@
 @import "../../styles/vars";
 @import "../../styles/mixin";
 
-#dark .сookies__link:hover {
-    color: $accentColor;
-    transition: color 0.1s ease;
-}
-#dark .сookies__link:focus {
-    color: $accentColor;
-    outline: none;
-}
-#dark .сookies__link {
-    color: $textColor_dark;
-}
 #dark .сookies a {
     color: $textColor_dark;
 }
-#dark .сookies a:hover {
-    color: $accentColor;
-    transition: color 0.1s ease;
+#dark .cookies__links_effect {
+    color: $textColor_dark;
+        &:focus {
+            color: $accentColor;
+            outline: none;
 }
-#dark .сookies a:focus {
-    color: $accentColor;
-    outline: none;
 }
+
+@media (hover: hover) {
+    #dark .cookies__links_effect:hover {
+        cursor: pointer; 
+        color: $accentColor;
+        transition: color 0.1s ease;
+    }
+}
+@media (hover: none) {
+    #dark .cookies__links_effect:hover {
+        color: inherit;
+    }
+    #dark .cookies__links_effect:active {
+        color: $accentColor;
+    }
+}
+
 #dark .сookies_divider {
     border-bottom: 1px solid #ffffff;
 }
@@ -31,7 +36,37 @@
     margin-bottom: 50px;
     font-size: 22px;
     line-height: 27px;
-
+    
+    .cookies__focusReset {
+        text-decoration: none;      
+        &:focus {
+            outline: none;
+        }
+    }
+    .cookies__links_effect {
+        cursor: pointer; //
+        /* text-decoration: none; */
+        /* font-size: 20px; */// Из свойства Маши header__link
+        &:focus {
+            color: $accentColor;
+            outline: none;
+        }
+    }
+    @media (hover: hover) {
+        .cookies__links_effect:hover { 
+            cursor: pointer;
+            color: $accentColor;
+            transition: color 0.1s ease;
+        }
+    }
+    @media (hover: none) {
+        .cookies__links_effect:hover {
+            color: inherit;
+        }
+        .cookies__links_effect:active {
+            color: $accentColor;
+        }
+    }
     &__title {
         margin-bottom: 70px;
     }
@@ -46,20 +81,9 @@
     &__text {
         margin-bottom: 60px;
         text-align: left;
-        
         a {
-            display: inline;
-            /* font-size: 22px; */
             text-decoration: underline;
-        }
-        a:hover {
-            color: $accentColor;
-            transition: color 0.1s ease;
-        } 
-        a:focus {
-            color: $accentColor;
-            outline: none;
-        }
+        }   
     }
     
     &__list-title {
@@ -70,16 +94,7 @@
         margin-bottom: 60px;
         a {
             display: inline;
-            /* font-size: 22px; */
             text-decoration: underline;
-        }
-        a:hover {
-            color: $accentColor;
-            transition: color 0.1s ease;
-        } 
-        a:focus {
-            color: $accentColor;
-            outline: none;
         }
     }
     &__list-item {
@@ -144,14 +159,6 @@
     &_divider {
         border-bottom: 1px solid #000000;
     }
-    &__link:hover {
-        color: $accentColor;
-        transition: color 0.1s ease;
-    }
-    &__link:focus {
-        color: $accentColor;
-        outline: none;
-    }
 }
 @media (min-width: $ultra) {
     .сookies  {
@@ -179,9 +186,6 @@
         &__list {
             list-style-type: none;
             margin-bottom: 65px;
-           /*  a {
-                font-size: 30px;
-            } */
         }
         &__list-item {
             margin-left: 100px;
@@ -246,9 +250,6 @@
         }
         &__text{
             margin-bottom: 30px;
-           /*  a {
-                font-size: 15px;
-            } */
         }
         &__subtitle_h3{
             font-size: 32px;
