--- a/src/components/ButtonClose/ButtonClose.scss
+++ b/src/components/ButtonClose/ButtonClose.scss
@@ -33,7 +33,7 @@
   width: 20px;
 }
 
-@media screen and (max-width: $tablet) {
+@media screen and (max-width: $tablet), (orientation: portrait) and (min-width: $tablet) and (max-width: 1025px) and (max-height:1367px) {
     .buttonClose__arrowWrapper {
         height: 20px;
       }
