--- a/src/components/ButtonJoin/ButtonJoin.scss
+++ b/src/components/ButtonJoin/ButtonJoin.scss
@@ -40,8 +40,8 @@
     width: 30px;
   }
   
-
-  @media screen and (max-width: $tablet) {
+ 
+  @media screen and (max-width: $tablet), (orientation: portrait) and (min-width: $tablet) and (max-width: 1025px) and (max-height:1367px) {
     .buttonJoin__arrowWrapper {
         height: 20px;
       }
@@ -109,6 +109,7 @@
         width: 55px;
       }
   }
+ 
   
   @media screen 
   and (orientation: landscape) 
