--- a/src/components/FormButton/FormButton.scss
+++ b/src/components/FormButton/FormButton.scss
@@ -68,7 +68,7 @@
     margin-right: 18px;
   }
 
-@media (max-width: $tablet)  {
+@media (max-width: $tablet),  (orientation: portrait) and (min-width: $tablet) and (max-width: 1025px) and (max-height:1367px)  {
     .formButton {
         margin-bottom: 15px;
     }
