--- a/src/components/WhyRecyclexBlock/WhyRecyclexBlock.scss
+++ b/src/components/WhyRecyclexBlock/WhyRecyclexBlock.scss
@@ -109,7 +109,8 @@
     }
 }
 
-@media (max-width: $tablet)  {
+@media (max-width: $tablet), (orientation: portrait) and (min-width: $tablet) and (max-width: 1025px) and (min-height:1024px) and (max-height:1367px), 
+(orientation: landscape) and (min-width: 1023px) and (max-width: 1367px) and (min-height: 767px) and (max-height: 1025px)  {
     .whyRecyclex {
         /* margin-top: 180px; */ //Идеальный отсуп
         margin-top: 150px; 
