--- a/src/pages/AboutProjectPage/AboutProjectPage.scss
+++ b/src/pages/AboutProjectPage/AboutProjectPage.scss
@@ -91,7 +91,9 @@
     }
 }
 
-@media (max-width: $tablet)  {
+@media (max-width: $tablet), 
+(orientation: portrait) and (min-width: $tablet) and (max-width: 1025px) and (min-height:1024px) and (max-height:1367px), 
+(orientation: landscape) and (min-width: 1023px) and (max-width: 1367px) and (min-height: 767px) and (max-height: 1025px) {
     .about {
         margin-top: 75px;
         margin-bottom: 50px;  
