--- a/src/pages/Contacts/Contacts.scss
+++ b/src/pages/Contacts/Contacts.scss
@@ -161,7 +161,9 @@
   }
 }
 
-@media screen and (max-width: $tablet) {
+@media screen and (max-width: $tablet) ,
+(orientation: portrait) and (min-width: $tablet) and (max-width: 1025px) and (min-height:1024px) and (max-height:1367px), 
+(orientation: landscape) and (min-width: 1023px) and (max-width: 1367px) and (min-height: 767px) and (max-height: 1025px) {
   .contacts__tablet_hidden {
     display: none;
   }
