--- a/src/pages/ErrorPage/ErrorPage.scss
+++ b/src/pages/ErrorPage/ErrorPage.scss
@@ -82,7 +82,8 @@
         }
     }
 }
-@media (max-width: $tablet)  {
+@media (max-width: $tablet), (orientation: portrait) and (min-width: $tablet) and (max-width: 1025px) and (min-height:1024px) and (max-height:1367px), 
+(orientation: landscape) and (min-width: 1023px) and (max-width: 1367px) and (min-height: 767px) and (max-height: 1025px)  {
     .errorPage {
         margin-top: 75px;
         margin-bottom: 116px;
