--- a/src/pages/FormPage/FormPage.scss
+++ b/src/pages/FormPage/FormPage.scss
@@ -226,10 +226,16 @@
 }
 
 
-@media screen and (orientation:landscape)
+/* @media screen and (orientation:landscape)
 and (max-width: $landscape) {
   .form {
     margin-top: 20px;
   }
   
+} */
+
+@media screen and (orientation:landscape) and (max-width: $horizonMobile) and (max-height: 600px) {
+  .form {
+    margin-top: 20px;
+  }
 }
