--- a/src/pages/PrivacyPolicyPage/PrivacyPolicyPage.scss
+++ b/src/pages/PrivacyPolicyPage/PrivacyPolicyPage.scss
@@ -59,7 +59,8 @@
         }
     }
 }
-@media (max-width: $tablet)  {
+@media (max-width: $tablet), (orientation: portrait) and (min-width: $tablet) and (max-width: 1025px) and (min-height:1024px) and (max-height:1367px), 
+(orientation: landscape) and (min-width: 1023px) and (max-width: 1367px) and (min-height: 767px) and (max-height: 1025px)   {
     .privacy {
         font-size: 15px;
         line-height: 18px;
