--- a/src/pages/AboutProjectPage/AboutProjectPage.scss
+++ b/src/pages/AboutProjectPage/AboutProjectPage.scss
@@ -181,7 +181,7 @@
         } */
     }
 }
-@media screen and (orientation:landscape) and (max-width: $horizonMobile) {
+@media screen and (orientation:landscape) and (max-width: $horizonMobile) and (max-height: 600px) {
     .about   {
         margin-top: 20px; 
     }
