Добавила медиа запрос для тач устройств

--- a/src/components/FormButton/FormButton.scss
+++ b/src/components/FormButton/FormButton.scss
@@ -163,6 +163,7 @@
       }
 }
 @media screen 
+  and (pointer:coarse)
   and (orientation: landscape) 
   and (min-width: 1023px) 
   and (max-width: 1367px) 
