--- a/src/components/ButtonSend/ButtonSend.scss
+++ b/src/components/ButtonSend/ButtonSend.scss
@@ -64,7 +64,7 @@
   margin-right: 18px;
 }
 
-@media screen and (max-width: $tablet), (orientation: portrait) and (min-width: $tablet) and (max-width: 1025px) and (max-height:1367px)  {
+@media screen and (max-width: $tablet), (orientation: portrait) and (min-width: $tablet) and (max-width: 1025px)  and (min-height:1024px) and (max-height:1367px)  {
   .buttonSend__arrowWrapper {
         width: 0;
         height: 9px;
@@ -111,6 +111,7 @@
   
 }
 @media screen 
+  and (pointer:coarse)
   and (orientation: landscape) 
   and (min-width: 1023px) 
   and (max-width: 1367px) 
