--- a/src/components/FormButton/FormButton.scss
+++ b/src/components/FormButton/FormButton.scss
@@ -55,6 +55,10 @@
       height: 20px;
       overflow: hidden; 
   }
+  .formButton__inner:active .formButton__arrowWrapper {
+    transition: width 0.5s ease-in-out;
+    overflow: visible;
+  }
   .formButton__inner:active .formButton__arrowWrapper_active {
     width: 0;
   }
@@ -65,6 +69,10 @@
       height: 12px;
       overflow: hidden;
   }
+  }
+  .formButton__inner:active .formButton__arrowWrapper {
+    transition: width 0.5s ease-in-out;
+    overflow: visible;
   }
   .formButton__inner:active .formButton__arrowWrapper_active {
     width: 0;
