--- a/src/components/PersonalDataInput/PersonalDataInput.scss
+++ b/src/components/PersonalDataInput/PersonalDataInput.scss
@@ -15,21 +15,22 @@
   -webkit-text-fill-color: #000;
   appearance: none;
   -webkit-appearance: none;
-
   &:focus {
     outline: none;
   }
+  caret-color: #000000;
 }
 
 #dark .personalDataInput__input {
   background-color: #1a1a1a;
   border-color: $textColor_dark;
   color: $textColor_dark;
-  box-shadow: inset 0 0 0 50px #1A1A1A;
-  -webkit-box-shadow: inset 0 0 0 50px #1A1A1A;
-  -webkit-text-fill-color: $bgColor;
+  box-shadow: inset 0 0 0 50px #1a1a1a;
+  -webkit-box-shadow: inset 0 0 0 50px #1a1a1a;
+  -webkit-text-fill-color: #fff;
   appearance: none;
   -webkit-appearance: none;
+  caret-color: #ffffff;
 }
 
 .PhoneInputCountry {
@@ -46,14 +47,16 @@
   &:focus {
     outline: none;
   }
+  caret-color: #000000;
 }
 
 #dark .PhoneInputInput {
   background-color: #1a1a1a;
   color: $textColor_dark;
-  box-shadow: inset 0 0 0 50px #1A1A1A;
-  -webkit-box-shadow: inset 0 0 0 50px #1A1A1A;
-  -webkit-text-fill-color: $bgColor;
+  box-shadow: inset 0 0 0 50px #1a1a1a;
+  -webkit-box-shadow: inset 0 0 0 50px #1a1a1a;
+  -webkit-text-fill-color: #fff;
+  caret-color: #ffffff;
 }
 
 #dark .PhoneInput {
@@ -99,7 +102,7 @@
     padding-left: 9px;
 
     & .personalDataInput__label {
-        left: 15px;
+      left: 15px;
     }
   }
 }
@@ -154,7 +157,7 @@
 
       & .personalDataInput__label {
         left: 20px;
-    }
+      }
     }
   }
 
@@ -175,7 +178,6 @@
 
 @media (max-width: $smallTablet) {
   .personalDataInput_inputWrapper {
-
     &:nth-child(2) {
       width: 100%;
       padding-right: 0;
@@ -190,7 +192,7 @@
       padding-left: 0;
       & .personalDataInput__label {
         left: 10px;
-    }
+      }
     }
   }
 
@@ -221,7 +223,7 @@
     &:nth-child(3) {
       & .personalDataInput__label {
         left: 5px;
-    }
+      }
     }
   }
 
@@ -246,7 +248,7 @@
 }
 
 @media (min-width: $ultra) {
-  .personalDataInput__input  {
+  .personalDataInput__input {
     height: 70px;
     font-size: 27px;
     border-width: 4px;
