Внесла изменения на страницах по обнавлениям в макетах

--- a/src/pages/Agreement/Agreement.scss
+++ b/src/pages/Agreement/Agreement.scss
@@ -24,6 +24,9 @@
         margin-bottom: 40px;
         address {display: inline;}
     }
+    address {
+        font-style: normal;
+    }
 }
 @media (min-width: $ultra) {
     .agreement {
