--- a/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
+++ b/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
@@ -89,6 +89,9 @@
     &__list-title {
         margin-bottom: 60px;
     }
+    .list-title_bottom {
+        margin-bottom: 20px;
+    }
     &__list {
         list-style-type: none;
         margin-bottom: 60px;
