--- a/src/styles/_btn.scss
+++ b/src/styles/_btn.scss
@@ -3,6 +3,7 @@
 .btn {
     width: 400px;
     padding: 27px 0;
+    font-family: $generalFont;
     font-size: 28px;
     background-color: $accentColor;
     color: #FFFFFF;
