--- a/src/components/HelpInput/HelpInput.scss
+++ b/src/components/HelpInput/HelpInput.scss
@@ -28,7 +28,7 @@
     background-color: #f1f0f0;
     border: 1px solid transparent;
     border-radius: 4px;
-    font-family: $generalFont;
+    font-family: $modalFont;
     appearance: none;
     -webkit-appearance: none;
     box-shadow: inset 0 0 0 50px #f1f0f0;
