--- a/src/components/ButtonSend/ButtonSend.scss
+++ b/src/components/ButtonSend/ButtonSend.scss
@@ -94,6 +94,12 @@
 }
 
 @media screen and (max-width: $mobile) {
+  
+    .buttonSend__inner {
+      font-size: 14px;
+      line-height: 14px;
+
+  }
     .buttonSend__check {
         top: -5px;
         right: -12px;
