--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -91,12 +91,12 @@
 
 @media (max-width: $mobile) {
   .checkboxWrapper:not(:last-child) {
-    margin-bottom: 15px;
+    margin-bottom: 12px;
   }
 
   .checkbox__label {
     font-size: 12px;
-    line-height: 11px;
+    line-height: 12px;
   }
 
   .checkbox__input + label::before {
@@ -104,13 +104,18 @@
     height: 9px;
     border: 1px solid $textColor;
     margin-right: 11px;
-    margin-top: 5.5px;
+    /* margin-top: 5.5px; */
+    margin-top: 1px;
   }
 
   .checkbox__mark {
     background-image: url("../../assets/imgs/check_mobile.svg");
-    top: 5px;
+    /* top: 5px; */
+    top: 1px;
     left: -0.2px;
+  }
+  .checkbox__text {
+    line-height: 12px;
   }
 }
 
