--- a/src/pages/FormPage/FormPage.scss
+++ b/src/pages/FormPage/FormPage.scss
@@ -85,6 +85,7 @@
   }
 
   .form__radio {
+    width: 580px;
     padding: 63px 50px 36px 50px;
   }
 
@@ -96,7 +97,7 @@
 @media (max-width: $smallTablet) {
   .form {
     margin-top: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 25px;
   }
 
   .form__header {
@@ -118,6 +119,7 @@
   }
 
   .form__radio {
+    width: 280px;
     padding: 28px 25px;
   }
 
